--- a/article/sg0/doc/0008.md
+++ b/article/sg0/doc/0008.md
@@ -206,7 +206,7 @@
 在回去之前，雷斯吉宁教授叫住了我，说是有话要说。  
 雷斯吉宁：“你有兴趣来当测试员吗？”  
 雷斯吉宁教授说的是日语，虽然带着浓重的美式口音，依然让我很惊讶。而他说出的话让我更加惊讶。我歪了歪头。  
-雷斯吉宁：“『Amadeus』的对话样本不够，即使动员我们研究室的所有人——”  
+雷斯吉宁：“『Amadeus』的对话样本不够，即使动员我们研究所的所有人——”  
 比屋定真帆：“即便如此，『Amadeus』还处在研究阶段，不能不加挑选地让人与其接触。”  
 雷斯吉宁：“这样一来，就想让作为红莉栖的朋友的 *Rintaro* 你来协助。”  
 好像之前宴会的时候确实说到测试员什么的，原来是这么回事。  
