--- a/article/sg0/doc/0014.md
+++ b/article/sg0/doc/0014.md
@@ -25,7 +25,7 @@
 “能不能不要把话说一半！”  
 “没什么。”  
 “不管如何，我也想多看看外面的世界。  
- 至今为止和教授前辈们说话的时候，也全都是在研究室中。”  
+ 至今为止和教授前辈们说话的时候，也全都是在研究室里。”  
 “所以我才像这样，在周日的大清早就给你做池袋的向导啊。”  
 早上 10 点，就算是这个时间，池袋车站前也有很多人，很热闹。伴随着正午的临近，人估计会更多吧。  
 “如果有必要，带你去‘少女之路’的觉悟都有哦。”  
