--- a/article/sg0/doc/0015.md
+++ b/article/sg0/doc/0015.md
@@ -12,7 +12,7 @@
 “我想你差不多应该到 LAB 了。”  
 我拿着手机，逃到了里面的开发室。  
 “看样子你相当闲啊。”  
-“为什么要悄悄说话？莫非你不想让你的**朋友们**知道我的事？”  
+“为什么要悄悄说话？莫非你不想让你的朋友们知道我的事？”  
 “这不是当然的……”  
 说起来，也没有向雷斯吉宁教授他们确认过，是否可以把『Amadeus』的事情告诉其他人。  
 “算了，我大概也了解状况了。”  
@@ -24,9 +24,8 @@
 “最初的感想就是这个吗……”  
 “抱歉，我换个说法……全是些破烂呢。”  
 你这不是也没变吗……嘛，虽说这是事实。  
-“虽说不论哪里的研究室这种地方都是乱七八糟的，  
- 话虽如此这里也太糟糕了……  
- 这简直和真帆前辈的住处有得一拼了。”  
+“虽说不论哪里，实验室这种地方都是乱七八糟的。  
+ 但是这里也太糟糕了……简直和真帆前辈的住处有得一拼。”  
 “暴露这种个人隐私真的好吗？”  
 “你也帮我给学姐说说，房间还是要好好整理的。”  
 “如果说了这话估计我会被咬的……”  
