--- a/article/sg0/doc/0017.md
+++ b/article/sg0/doc/0017.md
@@ -51,7 +51,7 @@
 明知道是被戏弄，真帆反而故意自己说了出来。  
 “正是，你们真的是毫不留情。这才是最强的安保系统！”  
 “听起来倒像是讽刺啊。”  
-“你们是我在研究室里最为自豪的最强的女士！  
+“你们是我在研究所里最为自豪的最强的女士！  
 雷斯吉宁教授笑得开心又快乐的样子，还是一如既往，有着孩童般天真无邪的笑容。  
 “不管怎么说，对『Amadeus』硬来是不行的。正因如此，也反而很有意思。  
  这样的‘她们’只是被自己人独占着也不会有进步的吧。  
