--- a/article/sg0/doc/0019.md
+++ b/article/sg0/doc/0019.md
@@ -107,13 +107,13 @@
 ……不是普通的纵火犯而是专业的犯罪，是想这么说吗？我无法用“那怎么可能”一笑带过。因为，这个世界中那样的人真实存在，我是知道的。  
 “还有——据说那些犯人们……说着俄语。”  
 俄语……俄罗斯——瞬间联想到的，就是中钵的事了。半年前，他从自己的女儿——红莉栖那里，盗取了关于时间机器的论文，并以此为见面礼逃到了俄罗斯。难道说，与这件事有关联？  
-“另外还有一点。红莉栖刚去世那会儿，我们研究室也发生了奇怪的事。  
+“另外还有一点。红莉栖刚去世那会儿，我们研究所也发生了奇怪的事。  
  与当地警察一起，自称日本刑警的人也来了，说是日美联合调查。  
  有关红莉栖的事件调查，我们当然尽可能地进行了协助。  
  但是过些日子，大学向警方询问时，  
  被告知没有那样的刑警从日本过来。”  
 “那么，那个日本刑警是假冒的？”  
-“不止那样，当地警察也说没有搜查过我们的研究室。  
+“不止那样，当地警察也说没有搜查过我们的研究所。  
  也就是说，不只是日本刑警，自称警察来访的所有人都是——”  
 “都是假的……”  
 “有了那样的事情之后，我……”  
