--- a/article/sg0/doc/0024.md
+++ b/article/sg0/doc/0024.md
@@ -13,7 +13,7 @@
 “怎么样，能来吗？”  
 “能啊。6 点开始是吧？”  
 “嗯\~现在，在大学？”  
-“没，在和光市，应该是研究室一类的地方，来叨扰认识的教授。”  
+“没，在和光市，研究所一类的地方，来叨扰认识的教授。”  
 “唔诶诶\~和光市……”  
 这家伙，绝对连和光市在哪都不知道吧。  
 “赶得上吗？”  
