--- a/article/sg0/doc/0036.md
+++ b/article/sg0/doc/0036.md
@@ -9,37 +9,31 @@
 对于“红莉栖”这个时候打来很是在意，于是我对二人解释了一下，接起了电话。  
 “嗯？怎么了？”  
 “你还和真帆前辈在一起吧？”  
-“额，嗯。在一起呢。”  
+“额，嗯，在一起呢。”  
 “发生什么了吗？”  
 听到了自己名字的比屋定也凑过来加入了对话。  
-“虽然只是刚刚才从雷斯吉宁教授那里听到的……  
- 和光市的办公室好像被什么人洗劫了。  
- 还有，真帆前辈住的宾馆也联系了过来，  
- 那边好像也有什么人入侵过了。”  
+“虽然只是刚刚才从雷斯吉宁教授那里听到的……和光市的办公室好像被什么人洗劫了。  
+ 还有，真帆前辈住的宾馆也传来了联络，那边好像也被什么人入侵过了。”  
 “诶？你说什么？！”  
 听到的事实让比屋定十分震惊。  
-“虽然很快雷斯吉宁教授也会联系你，但我想能越早知道越好吧。”  
-“谢谢你，‘红莉栖’。  
- 比屋定的话，有我和桶子在，没事的。”  
-“也是呢。拜托了。那就这样。”  
+“虽然很快雷斯吉宁教授也会联系你，但我想越早告诉你越好吧。”  
+“谢谢你，‘红莉栖’。比屋定的话，有我和桶子在，没事的。”  
+“也是呢，拜托了。那就这样。”  
 “红莉栖”挂断了电话。比屋定低着头咬着嘴唇，陷入了沉默。于是我转向桶子。  
-“担心的事情成为了现实啊……对方盯上的，肯定是红莉栖的笔记本电脑和硬盘。”  
+“担心成为了现实啊……对方盯上的，肯定是红莉栖的笔记本电脑和硬盘。”  
 “诶？真的假的？”  
 “……转移场所可能比较好。”  
 “但我觉得这里很安全啊？”  
 “不管怎么说都有股不好的预感，类似于直觉吧。”  
 “……我知道了哦。”  
 “那么，笔记本电脑和硬盘到底在哪？”  
-桶子像死了心一般叹了一声，打开了设置在旁边的架子上锁着的防火箱。  
-藏在这种地方啊……  
-笔记本电脑是搭载着十二英寸显示屏的日本造产品，颜色是深红色。  
-硬盘是以耐震性优良的塑胶外壳为卖点的美国货。  
-“带着这个赶紧出去吧！”  
+桶子像死了心一般叹了一声，打开了设置在旁边的架子上锁着的防火箱。原来藏在这种地方啊……某种程度上来说也算得上安全。笔记本电脑是搭载着 12 英寸显示屏的日本造产品，颜色是深红色；硬盘则是以耐震性优良的塑胶外壳为卖点的美国货。  
+“带上东西赶紧离开吧！”  
 比屋定和桶子都沉默着点了点头。  
 
 ![](../static/image/0036-1.png)
 
-从小店出来后离开建筑物不远，我们看到有辆车子正开进人流量稀少的小胡同，是辆美国的 RV。我们赶忙藏到其他大楼的阴影里。我的预感实现了。那辆 RV 停在了我们刚刚出来的杂居大楼前，里面走出了三个男人，全都不是日本人，装束都是黑色的西装，就像电影黑衣人里的一样，不管怎么看都不像是来秋叶原的游客吧。  
+从小店出来后离开建筑物不远，我们看到有辆车子正开进人流量稀少的小胡同，是辆美国产的休旅车。我们赶忙藏到大楼的阴影里。我的预感实现了。那辆休旅车停在了我们刚刚出来的杂居大楼前，里面走出了三个男人，全都不是日本人，装束都是黑色的西装，就像电影黑衣人里的一样，不管怎么看都不像是来秋叶原的游客吧。  
 “真是千钧一发啊。”  
 比屋定看着那些进入建筑的人，脸色都发青了，身体似乎在微微地颤抖着。  
 “这种事……就像是……电影里演的那样……根本没想过居然会发生在现实中……”  
@@ -47,41 +41,40 @@
 “不是因为桶子你的疏忽吗？”  
 “你以为我是谁啊？”  
 “超级嗨客咯？”  
-“是黑客。我明明很小心翼翼地注意的。”  
+“是超级黑客！我明明很小心翼翼地注意的……”  
 “或者也可能是，跟踪我和比屋定来的……”  
 “不要说那么可怕的事啊……”  
-“和光市的办公室和宾馆都被洗劫了，比屋定肯定是一直被跟踪着。”  
-“啊，对了。”  
-比屋定好像想起了什么似的，拿出手机打电话。  
-“不联系教授的话……”  
-“告诉他你今天会先躲到安全的地方就好了。和教授见面的话可能会牵连到他。”  
-对于我的话，比屋定露出微妙的表情点了点头。  
+和光市的办公室和宾馆都被洗劫了，比屋定肯定一直被跟踪了。  
+“啊，对了，应该告诉教授一声……”  
+比屋定拿出手机准备。  
+“先告诉教授你今天会躲到安全的地方就好了，见面的话可能会牵连到他。”  
+对于我的话，比屋定表情微妙地点了点头。  
+
+[真帆视角]
 
 比屋定被冈部带到了菲莉丝的家，坐落于秋叶原中心的某个高层大厦的最顶层，比起 cosplay 商店的老式建筑，安全性肯定是上升了几个档次。菲莉丝愉快地招待了二人，并提供了床铺和食物。而桥田至为了和铃羽碰面，一个人回了未来装置研究所。  
 “这个笔记本电脑，只是存在本身就会招来灾祸，舍弃它可能比较好。”  
-状况稳定下来之后，冈部开始讨论起关于处理红莉栖的笔记本电脑和硬盘的问题。他的意见十分坚定。虽然平常的他都是那种会呆在某处，不愿太过强调自身主张的类型。但是对于这件事他却显得十分顽固。但是，比屋定也是一样的顽固。  
-“我想至少应该解锁之后确认下里面的内容吧。虽说以现况看来这个还做不到……”  
-“现在不是说这种悠闲的话的时候。应该立即舍弃掉，最好是直接在这里破坏掉——”  
-“居然说要破坏掉……这可是红莉栖的遗物啊！”  
+状况稳定下来之后，冈部开始讨论起关于处理红莉栖的笔记本电脑和硬盘的问题。他的意见十分坚定，虽然平常的他都是那种会待在某处，不愿太过强调自身主张的类型，但是对于这件事他却显得十分顽固。但是，比屋定也是一样的顽固。  
+“我想至少应该解锁之后确认下里面的内容吧，虽说以现况看来这个还做不到……”  
+“现在不是这么悠闲的时候。应该立即舍弃掉，最好是现在就直接破坏——”  
+“居然要破坏……这可是红莉栖的遗物啊！”  
 “我还以为你是更有逻辑性的人。”  
 “我也以为你不是那么冷漠的人。”  
 “……”  
-对于比屋定的话，冈部楞了一下，刹那间露出了可怕的表情。  
-——这个人，到底在隐瞒着什么啊？比屋定在心里想着。能轻易猜到的部分是，这应该是和红莉栖有关的事。所以，她决定借着这个机会，把中午匆忙间没能问的问题毫不客气地质问出来。  
+对于比屋定的话，冈部楞了一下，刹那间露出了可怕的表情。这个人，到底在隐瞒着什么啊？比屋定在心里想着。能轻易猜到的部分是，这应该是和红莉栖有关的事。所以，她决定借着这个机会，把中午匆忙间没能得到答案的问题毫不客气地问出来。  
 “我感觉，关于红莉栖事件，你可能隐瞒着什么——”  
 “……我知道的都是些无关紧要的事。”  
-比屋定感觉冈部无论如何都想回避这个话题。中午在那个工作室的时候，如果没有那件事的介入的话，他应该已经说出来了吧。  
+比屋定感觉冈部无论如何都想回避这个话题。中午在那个工作室的时候，如果没有碰上那件事，他应该已经说出来了吧。  
 “比起这些，现在最重要的是这台笔记本电脑应该怎么处理。  
- 这已经不是什么‘朋友的遗物’这种级别的问题了，  
- 而是会引起国家规模的争夺战的东西。”  
-“到底在说什么阴谋论呀。”  
-“都到这种时候了你还要说这是阴谋论吗？  
+ 它已经不是什么‘朋友的遗物’这种私人等级的物品了，而是会引起国家规模的争夺战的东西。”  
+“你到底在说什么阴谋论呀？”  
+“都这种时候了，你还要说这是阴谋论吗？  
  你也看到了吧，那些穿着黑色西装的外国人；  
- 你一直在的办公室和住着的酒店都被洗劫了；  
+ 你所在的办公室和酒店都被洗劫了；  
  红莉栖的家也被纵火了；  
- 纵火事件后，你的研究室也有自称 FBI 的神秘男子为了调查而来；  
+ 纵火事件后，你的研究所也有自称 FBI 的神秘男子为了调查而来；  
  之前在酒店的停车场被袭击的事，说不定也有什么关联。  
- 平常绝对碰不到的事，一个接一个地发生，这绝非偶然。”  
+ 平常绝对碰不到的事件，一个接一个地发生，这绝非偶然。”  
 “就算这样，国家规模什么的……”  
 对于比屋定来说，她还处于云里雾里的状态。给所有事情强加上关联性，就会让人容易掉入阴谋论者的圈套。但事实是，世界上发生的很多事，并没有那么复杂的原因。刚想这样反驳，冈部又继续说了更多让比屋定震惊的话。  
 “事态在此之后将会像约翰·提托预言的那样发展吧。”  
@@ -157,13 +150,13 @@
  今后，不止是他，我也打算找更多的测试员参与进来。”  
 “在安全的层面上，不会有不安因素吗？  
  美国和日本离得这么远，要是出了什么问题，我们无法应对啊。”  
-“没关系的，因为我信任着 *Rintaro* 呢！”  
+“没关系的，因为我信任 *Rintaro* 呢！”  
 “不，这不是信不信任的问题……”  
 “而且，如果继续测试的话，*Maho* 也能定期和 *Rintaro* 联络哟？”  
 “啥？！和我没关系的吧？！”  
-“是这样吗？”  
-“是的哟！”  
-“那么之后和 *Rintaro* 联络的事，就由我直接进行吧。”  
+“真的吗？”  
+“真的哟！”  
+“那么之后和 *Rintaro* 的联络，就由我直接进行吧。”  
 “没、没意见啊。”  
 虽然感觉是被岔开话题了，但比屋定也因为害羞没能继续追究。只是，雷斯吉宁教授这么中意冈部，还是挺意外的。从相遇的那一刻起，教授好像就对这位叫做冈部伦太郎的青年特别有好感。只是单纯欣赏，或者因为他是红莉栖的朋友，还是说别的什么原因？比屋定并不知道。  
 
