--- a/article/sg0/doc/0037.md
+++ b/article/sg0/doc/0037.md
@@ -6,7 +6,7 @@
 
 ---
 
-时间已经过了晚上 11 点，维克多·孔多利亚大学内一片宁静。就研究室而言，因为经常有从深夜一直进行到早上的实验，所以并非完全没有人员的进出，但是相比白天来说还是相当的安静。因为走廊的照明已经关掉了，一个人走的话还是有些不安。真帆住在相邻的研究员用公寓。这天晚上，她在自己的房间里思考各种问题，脑子都快炸了。从房间正好能看到的“脑科学研究所”的窗子，这个时候还亮着灯。一定是雷斯吉宁教授还在那里吧，这样想着真帆用保温壶装了咖啡准备带过去。  
+时间已经过了晚上 11 点，维克多·孔多利亚大学内一片宁静。就研究所而言，因为经常有从深夜一直进行到早上的实验，所以并非完全没有人员的进出，但是相比白天来说还是相当的安静。因为走廊的照明已经关掉了，一个人走的话还是有些不安。真帆住在相邻的研究员公寓。这天晚上，她在自己的房间里思考各种问题，脑子都快炸了。从房间正好能看到的脑科学研究室的窗户，这个时候还亮着灯，一定是雷斯吉宁教授还在那里吧，这样想着真帆用保温壶装了咖啡准备带过去。  
 （说起来，为什么我要执着于时间机器的研究呢……）  
 一月份从日本回来之后，真帆就投入了这方面的研究。虽然自己这么说有点怪，有点太过执着了。当然，这是不能公开的研究，也不能妨碍到本来的工作，理所当然的，她就只能在工作时间之后悄悄地在自己的房间里进行了。结果，就变成了像这样每天晚上都和并非自己专业的物理学搏斗的状况，睡眠不足和疲劳差不多快累积到难以承受的程度了。  
 ——时间机器什么的，太荒唐了。  
@@ -145,7 +145,7 @@
 红莉栖生前是否真的完成了时间机器理论还不确定。但是，如果是真的，“红莉栖”的记忆深处，说不定还留有一些片段。不过，这种事情不可能当着雷斯吉宁教授的面说。在自己房间偷偷进行时间机器研究的事情也是，绝对不能公开。要是被研究所的人们知道了，毫无疑问肯定会被当成傻瓜的。说到底，这也并不是真帆原本的研究领域。  
 “那个……就这样，教授，我差不多该回房间睡觉了。”  
 真帆结束话题，留下装着咖啡的保温壶，准备离开研究室。  
-“啊，稍等一下。最近，*‘Maho’* 的记忆资料，完全没有更新吧？”  
+“啊，稍等一下，最近，*‘Maho’* 的记忆资料，完全没有更新吧？”  
 “啊……？”  
 “是说『Amadeus』的 *‘Maho’* 哟。”  
 “啊，那个……”  
@@ -164,15 +164,15 @@
 “不要总是和 *‘Kurisu’* 对话，偶尔也要顾及‘自己’，肯定很寂寞呢。  
  明天，必须要进行记忆的更新，可以吧？”  
 “……明白了。”  
-真帆点点头，走出了研究室。不进行“真帆”的记忆更新的原因，除了对雷斯吉宁教授说明的以外，其实还有一个。就是伦太郎的话。  
-“那，『Amadeus』的研究中，美军的参与……没有的吧？”  
+真帆点点头，走出了研究室。不进行“真帆”的记忆更新的原因，除了对雷斯吉宁教授说明的以外，其实还有一个，就是冈部伦太郎的话。  
+“那，『Amadeus』的研究中，有美军的参与……不会吧？”  
 没有可靠的证据，但是，这句话无论如何也无法从脑中抹去。『Amadeus』的研究，有没有幕后的巨大力量在操纵呢？就连雷斯吉宁教授也无法干预的巨大力量……如果把在日本的记忆资料更新的话，“真帆”就会获得关于红莉栖的笔记本电脑和硬盘的情报。即使信任『Amadeus』，但是如果存在幕后想要利用『Amadeus』的人，这些信息就会全部泄露。这种近似妄想的，过剩的不安，从真帆回到美国之后一直存在。  
 
 “不过果然……是我想太多了吧……”  
 “谁？谁在那里！？”  
-正在真帆自言自语的时候，忽然，漆黑的走廊前方，传来女性的声音，吓得真帆停住了脚步。通道的灯一下子被点亮，从连接着隔壁研究所大楼的走廊，多名男女成列向这边走过来。隔壁的大楼，是【精神生理学研究所】。真帆所属的【脑科学研究所】，以大脑本身的机能研究为主。另一方面，【精神生理学研究所】，是关于脑活动带来的心理活动或者病理之类的，更接近医学的部分为专业的。  
-“不、不好意思，我是比屋定真帆，雷斯吉宁教授的研究室的。”  
-真帆认识走在最前面的女性，是所属于【精神生理学研究所】的莱耶丝教授。  
+正在真帆自言自语的时候，忽然，漆黑的走廊前方，传来女性的声音，吓得真帆停住了脚步。通道的灯一下子被点亮，从连接着隔壁研究所大楼的走廊，多名男女成列向这边走过来。隔壁的大楼，是精神生理学研究所。真帆所属的脑科学研究所，以大脑本身的机能研究为主。另一方面，精神生理学研究所，是关于脑活动带来的心理活动或者病理之类的，更接近医学的部分为专业的。  
+“不、不好意思，我是比屋定真帆，雷斯吉宁教授的研究所的。”  
+真帆认识走在最前面的女性，是精神生理学研究所的莱耶丝教授。  
 
 ![](../static/image/0037-1.png)
 
@@ -191,15 +191,15 @@
  啊，无意冒犯。不过，谢谢啦。”  
 莱耶丝教授笑着说完后，穿过真帆身边走向雷斯吉宁教授的研究室，其他研究员们也陆续跟在后面。  
 （研究上的问题……究竟是什么呢？）  
-仔细看了一下，真帆在同行的研究所人员中发现了一幅没见过的面孔。也说不清楚为什么会注意到那个人，该怎么描述呢——他，完全不像个学者。长期从事研究工作，能自然而然地感觉到相同的科研人员的气质。但是，那个男人明显散发出与周围完全不同的氛围，而且，对莱耶丝教授的态度也很不恭敬。如果是她研究室的人是绝对不会这样的做。另外，包括莱耶丝教授在内，其他的研究员全体都穿着白大褂，只有那个男人整整齐齐地穿着完全没有褶皱的西装。真帆总觉得不对劲。  
-本来快要回到自己房间的真帆，因为非常在意，就绕了回来，压低脚步声走向了雷斯吉宁的研究室。研究室的门微微开着，从那里能听到里面的谈话声。真帆知道这么做不对，但是还是把脸贴在门边，竖起了耳朵。  
+仔细看了一下，真帆在随行的研究所人员中发现了一幅没见过的面孔。也说不清楚为什么会注意到那个人，该怎么描述呢——他，完全不像个学者。长期从事研究工作，能自然而然地感觉到相同的科研人员的气质。但是，那个男人明显散发出与周围完全不同的氛围，而且，对莱耶丝教授的态度也很不恭敬。如果是她研究所的人是绝对不会这样的做。另外，包括莱耶丝教授在内，其他的研究员全体都穿着白大褂，只有那个男人整整齐齐地穿着完全没有褶皱的西装。真帆总觉得不对劲。  
+本来快要回到自己房间的真帆，因为非常在意，就绕了回来，压低脚步声走向了雷斯吉宁的研究室。门微微开着，从那里能听到里面的谈话声。真帆知道这么做不对，但是还是把脸贴在门边，竖起了耳朵。  
 “——准备放任到什么时候？”  
 “那可是贵重的情报来源。鲁莽行动导致被废弃的话就可惜了吧。  
  不管怎么说，我这个月会出发去日本，准备在那时回收。” 
 “为什么要观察将近半年？能给我一个可以接受的解释吗？”  
 “我感觉他隐瞒着什么我们所不知道的事。  
  于是，想用『Amadeus』引诱他说出来……  
- 但是他警戒心很强，是个谨慎的青年啊，*Rintaro·Okabe*。”  
+ 但是他警戒心很强，是个谨慎的青年啊，*Okabe·Rintaro*。”  
 “对真帆施展你得意的手术怎么样？”  
 “可是我认为她什么都不知道呢。”  
 “啊……”  
