--- a/article/sg0/doc/0038.md
+++ b/article/sg0/doc/0038.md
@@ -6,30 +6,28 @@
 
 ---
 
-季节马上就要进入 7 月了。今年不知是不是干黄梅的原因，东京没有下梅雨的迹象，却已经呈现出了梅雨期后的天气。不如说，气温已经早就变成夏天的炎热了。  
+马上就要进入 7 月了，今年可能是干黄梅，东京至今还没有梅雨的迹象，却已经呈现出了梅雨期后的天气。不如说，气温早就已经进入夏天了。  
 （夏天啊……）  
 也就是说……那件事之后，已经快要一年了。  
-这是个周六的午后。在家里不仅酷暑难当，还被老爸唠叨着帮忙生意，于是我就来到了池袋车站附近。一年前的话，还有 LAB 这个歇脚地，但现在因为铃羽住在那儿，就尽量不过去了。但是这样一来，在休息日适合学习的地方就不怎么好找了。去大学也嫌麻烦，休息日教室估计也不开放。经过种种考量之后，决定在离老家较近的这间咖啡店坐几个小时。实际上，这一类的咖啡店里和我一样，一杯咖啡坐上几个小时的人非常多，有的带来了笔记本电脑，有的在读书。我说不定也加入了这些现充的队列了……心中这样苦笑道。  
-
-正在咖啡店看书时，手机响起了 RINE 的消息提示音。  
+这是个周六的午后。家里不仅酷暑难当，还被老爸唠叨着帮忙生意，于是我就来到了池袋车站附近。一年前的话，还有 LAB 这个落脚处，现在因为铃羽住在那儿，就尽量不过去了。但是这样一来，休息日适合学习的地方就不怎么好找了。去大学也嫌麻烦，休息日教室估计也不开放。经过种种考量，决定在离老家较近的一间咖啡店坐几个小时。实际上，这种咖啡店里，和我一样一杯咖啡坐几个小时的人非常多，有的带来了笔记本电脑，有的在读书。我说不定也加入了这些现充的行列了……不由得心中苦笑。  
+正在咖啡店里看书的时候，手机响起了 RINE 的消息提示音。  
 
 『嘟嘟噜\~♪现在在哪？』  
 「![](../static/image/emoji/okarin-hecha.png)」  
-『啊，老地方的咖啡店啊  
- 刚才去了冈伦家，你不在』  
+『啊，老地方的咖啡店啊』  
+『刚才去了冈伦家，你不在』  
 「你去我家了啊，老爸没有给你添麻烦吧？」  
-『没有哟，还款待了麦茶  
- 我有些必须要买的东西，能陪我吗？』  
+『没有哟，还款待了麦茶』  
+『我有些东西必须要买，能陪我去吗？』  
 「![](../static/image/emoji/okarin-OK.png)」  
-『![](../static/image/emoji/faris-thanks.png)  
- 那我现在就过去，在那等我哦』  
+『![](../static/image/emoji/faris-thanks.png)』  
+『那我现在就过去，在那等我哦』  
 
-那家伙，去过我家了啊……  
-我的老家【冈部青果店】，是古老的商业街中的一家破旧的店，差不多建成有 40 年了。残破得很，是时候重新装修一下比较好。  
+那家伙，去过我家了啊……我的老家【冈部青果店】，位于一条古老的商业街中，建成差不多有 40 年了，残破得很，是时候该重新装修一下了。  
 “呼……”  
-注意力分散了。还有不到 15 分钟真由理就要来了，今天的学习就到此为止吧。中午的时候把该读的都读过了，嗯，也算是可以吧。对于最近自己的专注度，我自己都有些吃惊。因为有了目标，感觉到干劲涌了上来。必须尽早达到去维克多·孔多利亚大学的条件。  
+注意力没法集中了，还有不到 15 分钟真由理就到了，今天就学习就到这吧。上午把该读的都读过了，嗯，也算是可以吧。我都有些吃惊于自己最近的专注度，因为有了目标，简直干劲满满，我必须尽早达到去维克多·孔多利亚大学的条件。  
 （维克多·孔多利亚大学啊……）  
-我和比屋定因为『Amadeus』的事有在定期进行邮件和聊天。那边好像研究很繁忙，总是一副睡眠不足的样子。  
+我和比屋定有定期互发邮件和 RINE。她好像每天都在夜以继日地研究，总是一副睡眠不足的样子。  
 
 这时手机又响起了铃声，拿出来一看是“红莉栖”的来电。  
 “你好（悄声）。”  
@@ -53,27 +51,27 @@
 “啊，等——”  
 我挂断了电话。“红莉栖”说起话来总是很长时间都说不完的样子。的确本体也是滔滔不绝的性格。在这种地方和她对话，我会太在意周围的目光，感觉很不自在。我也提议过因为看着屏幕说话太羞耻，想要变成和平常打电话一样的形式来交谈。但是这样“红莉栖”就有意见了——为什么我要可悲地一边看着你的脑袋一边说话？真是个任性的程序，真是的……  
 
-与真由理汇合后来到了 HANDS（东京手创馆）。进到空调十足的店里，有重生的感觉。才 6 月份就这种热度，真不知道到了 7、8 月份该怎么办。  
+与真由理汇合后来到了 HANDS（东京手创馆）。进到空调十足的店里，有重生的感觉。才 6 月就这种热度，真不知道到了 7、8 月份该怎么办。  
 “那么，到底要买些什么东西？”  
 “那个，要做宣传商品用的 POP，所以，要买用到的卡片啊、荧光笔之类的。”  
-“今年准备在漫展卖同人本么？”  
-“不是的，用在『冈部青果店』的哟\~”  
+“今年准备在漫展出同人本吗？”  
+“不是的，是用在【冈部青果店】的哟\~”  
 “啊？你说什么……？”  
 我的老家？  
 “今天，去冈伦家的时候，和叔叔谈到了这件事。  
-“‘那么就让真由喜来做！’——这样参选了。”  
+“‘那么就让真由喜来做！’——这样提案了。”  
 “喂喂……”  
 老爸那家伙，真是厚脸皮啊。  
 “你没有必要做这事哦。”  
 “但是但是，真由喜是想要做才做的。”  
 “真的……没关系吗？”  
 “因为总是受冈伦和叔叔阿姨的照顾呢。”  
-“……那么，作为补偿下次会送你礼物的。”  
+“……那么，作为补偿，下次会送你礼物的。”  
 “真的？好开心呐！”  
 
 ![](../static/image/0038-1.png)  
 
-大致地转了一圈卖场，用于 POP 的材料种类相当的多。我尽量不出声，让真由理按自己的品味选择。真由理花了相当长的时间，仔细地斟酌着该买哪个好。只是，因为平时在 *MayQueen+Nyan²* 的原因吗，真由理的品味该怎么说呢……偏向于萌系的方向。交给真由理应该没什么危险吧……尽管这么说，被拜托的是真由理，所以我出手干涉也不对吧。这里就放开胸襟，全部交给真由理吧。因此，我就在卖场随便地转悠着等待真由理买完东西……这时又接到了“红莉栖”的电话。  
+大致地转了一圈卖场，用于 POP 的材料种类相当的多。我尽量不出声，让真由理按自己的品味选择。真由理花了相当长的时间，仔细地斟酌着该买哪个好。只是，因为平时在 *MayQueen+Nyan²* 待久了的原因吗？真由理的品味该怎么说呢……偏向于萌系的方向。交给真由理应该没什么危险吧……尽管这么说，被拜托的是真由理，所以我出手干涉也不对吧。这里就放开胸襟，全部交给真由理吧。因此，我就在卖场随便地转悠着等待真由理买完东西……这时又接到了“红莉栖”的电话。  
 “怎么了吗？”  
 “难道说在买东西？”  
 “嗯，和真由理一起。”  
@@ -112,8 +110,7 @@
 ……虽然我也觉得“红莉栖”的事没有必要这样拼命地隐藏，另一方面，又觉得唯独还是不要让真由理知道比较好。因为，起码她知道我去年的夏天没能拯救牧濑红莉栖的事。  
 “那么，要买的东西确定了吗？”  
 “啊，嗯！这种感觉的怎么样？”  
-购物篮里面，放着大量的心形或星形的 POP 纸。这些……与我老家店铺的氛围，致命地不合适的感觉……但是，这也是一开始就肯定会变成这样的——全部交给真由理的品味的话。之后可能会被老爸牢骚一番，但是不关我的事。拜托真由理的不是我，而是老爸。因此，我什么意见也没说就去结账了。因为是周六，收银台附近等待结账的客人堆得满了出来，会很费时间的样子，我就让真由理到别的楼层的动漫周边卖场去等了，那里会有真由理喜欢的《雷 NET 翔》的周边商品出售。真由理觉得很抱歉的样子，还是按照我说的去了。  
-
+购物篮里面，放着大量的心形或星形的 POP 纸。这些……与我老家店铺的氛围，致命地不合适的感觉……但是，这也是一开始就肯定会变成这样的——毕竟我全部交给真由理的品味了。之后可能会被老爸发一通牢骚，但是不关我的事，拜托真由理的不是我，而是老爸。因此，我什么意见也没说就去结账了。因为是周六，收银台附近等待结账的客人堆得满了出来，会很费时间的样子，我就让真由理到别的楼层的动漫周边卖场去等了，那里会有真由理喜欢的《雷 NET 翔》的周边商品出售。真由理不好意思地按我说的去了。  
 结果，结账花了 15 分钟。同时我为表歉意许下的送礼物的约定也兑现了。  
 “诶嘿嘿\~\~”  
 真由理一副高兴至极的样子注视着手上的钥匙圈。  
@@ -125,7 +122,7 @@
  而且，这只是普通的绿色乌帕吧？不是稀有的那种啊。  
  稀有的貌似是……金属乌帕来着？”  
 全身闪烁银色光辉的金属乌帕，在乌帕之中也算人气很高，作为商品的稀有度也很高。比方说的话，以便利店的商品抽签来说，金属乌帕肯定相当于特等奖。据说在网上拍卖的话能值好几万，之前听真由理说过的。  
-“不-不-不——”  
+“不，不，不——”  
 真由理不知为何显得很得意的样子，左右摇动着食指。  
 “不是的哦\~这个啊，虽然是绿色的乌帕先生，但是和普通的不一样的！  
  是在之前放映的电影中登场的‘森之妖精先生乌帕’哟！”  
