--- a/article/sg0/doc/0039.md
+++ b/article/sg0/doc/0039.md
@@ -88,7 +88,7 @@
 要问是什么关系的话，也并不是什么师徒关系。应该怎么回答这个问题呢……  
 “看你应该还是个学生吧……是哪个大学呢？和教授一样是脑科学相关的话——”  
 “不，我是——”  
-“他的话，9 月开始就是维克托·孔多利亚大学的学生了。以后也是准备来我的研究室的。”  
+“他的话，9 月开始就是维克托·孔多利亚大学的学生了。以后也是准备来我的研究所的。”  
 “诶？”  
 “嚯嚯，维克托·孔多利亚大学啊。真是让人惊讶。”  
 虽然想着用眼神去问雷斯吉宁教授这到底是怎么回事，但只得到了微笑作为答复。  
