--- a/article/sg0/doc/0041.md
+++ b/article/sg0/doc/0041.md
@@ -91,7 +91,7 @@
 “还没，不过对方好像知道咱们这里。”  
 “所、所以说，这到底怎么回事啊？”  
 “那家伙……在监视这个 LAB。”  
-半年前在广播馆屋顶上穿着紧身衣监视铃羽，被她发现追赶后却逃之夭夭的人，绝对是篝。从那之后，铃羽一直集中心思保护时间机器，附近再也没有发现类似篝的人物——铃羽压根就没想过，篝在监视 LAB。
+半年前在广播馆屋顶上穿着黑色骑手装监视铃羽，被她发现追赶后却逃之夭夭的人，绝对是篝。从那之后，铃羽一直集中心思保护时间机器，附近再也没有发现类似篝的人物——铃羽压根就没想过，篝在监视 LAB。
 “不，稍微考虑一下的话这也是当然的事情。  
  那家伙，在阻止我们到达 Steins;Gate。  
  她不想把这个世界变成没有发生过。  
@@ -142,35 +142,29 @@
 ![](../static/image/0041-3.png)
 
 “哼，大热天的，真亏你能穿成那样呢，至少把头盔摘掉如何？”  
-对方和当时一样穿着紧身衣，就连头盔也没变。完美贴合曲线的皮革，勾勒出凹凸有致的黄金比例身段。毫无疑问是女性。  
-“你要找的东西不在那里哦。在我外套的口袋里。”  
-铃羽指向淋浴间的入口，刚刚脱下的衣服都凌乱地堆在那里。  
-好像被抓住了弱点，穿紧身衣的女性把头扭向那边。但由于头盔的遮挡，并不能看见她的表情。  
+对方和当时一样穿着黑色骑手装，就连头盔也没变。完美贴合曲线的皮革，勾勒出凹凸有致的黄金比例身段，毫无疑问是女性。  
+“你要找的东西不在那里哦，在我外套的口袋里。”  
+铃羽指向淋浴间的入口，刚刚脱下的衣服凌乱地堆在那里。好像被抓住了弱点，穿黑色骑手装的女人把头扭向那边，但由于头盔的遮挡，并不能看见她的表情。  
 “呐？弄丢了可不好哦，这可是妈妈送给你的重要的东西吧？**篝**？”  
-话音刚落，那名女性——椎名篝率先采取了行动。她拔出藏在腰后面的那把经过消光处理的军用匕首，撞向铃羽怀里。铃羽为了不击中要害，向她的脚按下了扳机。伴随.32 口径的枪口发出轻盈的枪声，篝失去平衡跌向地面——然而这完全是假动作。篝假装失去平衡，却绕过铃羽向淋浴间冲了过去。看来她想要先发制人夺取目标物品。  
+话音刚落，那名女性——椎名篝率先采取了行动。她拔出藏在腰后面的那把经过消光处理的军用匕首，撞向铃羽怀里。铃羽为了不击中要害，向她的脚按下了扳机。伴随 .32 口径的枪口发出的轻快的枪声，篝失去平衡跌向地面——然而这完全是假动作。篝假装失去平衡，却绕过铃羽向淋浴间冲了过去，看来她想要先发制人夺取目标物品。  
 “这是！？”  
-开枪后，铃羽立刻察觉到，即使是.32 口径的枪，后坐力也不会这么小。  
-她又开了一枪，果然对篝的动作毫无影响。  
-(空包弹！？怎么回事！？）  
-铃羽手中的枪不知道什么时候被替换成了空包弹匣。  
-篝抓住铃羽这一瞬间的动摇产生的破绽，把手伸向了淋浴间前的外套。  
+开枪后，铃羽立刻察觉到，即使是 .32 口径的枪，后坐力也不会这么小。她又开了一枪，果然对篝的动作毫无影响。  
+（空包弹！？怎么回事！？）  
+铃羽手中的枪不知道什么时候被替换成了空包弹匣。篝抓住铃羽这一瞬间的破绽，把手伸向了淋浴间前的外套。  
 “可恶！”  
-铃羽放弃射击，把枪投掷出去。一声钝响，击中了篝的脖子。她踉跄了一下，没能抓到外套。  
+铃羽放弃射击，把枪投掷出去，一声钝响，击中了篝的脖子。她踉跄了一下，没能抓到外套。  
 “唔咕！！”  
-头盔中，篝第一次发出了沉闷的声音。铃羽朝她飞踢过去，毫不留情地用绷紧肌肉的腿踢向了趔趄的篝。被踢飞的篝，借势滚到了房间的角落。她应该已经断了几根肋骨才是——铃羽对自己刚才的发力有把握，打算乘胜追击。但是篝以可怕的爆发力迅速起身，向铃羽猛冲过来。这反击来的太快使得铃羽无法立刻调整动作——  
+头盔里的篝第一次发出了沉闷的声音。铃羽朝她飞踢过去，毫不留情地用绷紧肌肉的腿踢向了趔趄的篝。被踢飞的篝，借势滚到了房间的角落。她应该已经断了几根肋骨才是——铃羽对自己刚才的发力有把握，打算乘胜追击。但是篝以可怕的爆发力迅速起身，向铃羽猛冲过来。这反击来的太快使得铃羽无法立刻调整动作——  
 “呃哈！？”  
 刀尖的轨迹离铃羽裸露的腹部仅有几厘米。回避动作慢上零点几秒，就会划破肠子，造成致命伤。  
 “你个混蛋！！”  
-铃羽非常生气。这家伙毫无疑问是打算杀了我，她的动作里没有任何的犹豫。  
-铃羽后退了一些，同时寻找着能作为武器的东西。但是，恐怕其他隐藏的枪也被做了手脚，替换成了空包弹。搞不好，也许连护身用的匕首也全部被拿走了。既然这样，剩下的就是——铃羽悄悄瞥向了厨房里摆放得很整齐的几把菜刀和小刀，是由季为了教真由理料理特意买来的。但是，篝也已经注意到了它们，移步挡住了铃羽的移动路线。  
+铃羽非常生气。这家伙毫无疑问是打算杀了我，她的动作里没有任何的犹豫。铃羽后退了一些，同时寻找着能作为武器的东西。但是，恐怕其他隐藏的枪也被做了手脚，替换成了空包弹。搞不好，也许连护身用的匕首也全部被拿走了。既然这样，剩下的就是——铃羽悄悄瞥向了厨房里摆放得很整齐的几把菜刀和小刀，是由季为了教真由理料理特意买来的。但是，篝也已经注意到了它们，移步挡住了铃羽的移动路线。  
 “嘿，很老练嘛。完全不像是那个在时间机器里哭哭啼啼的小孩，真让我吃惊啊。”  
 铃羽一边挑衅，一边对峙着沿着墙壁慢慢移动。她被激起了战斗欲，准备扭转不利的局面。  
 “看，篝，你是想要这个吧？”  
-铃羽移动到淋浴间前，捡起外套，拿出了口袋里的绿色钥匙圈。  
-篝的呼吸混乱了起来，发出了似是愤怒似是不甘的呜咽。  
+铃羽移动到淋浴间前，捡起外套，拿出了口袋里的绿色钥匙圈。篝的呼吸混乱了起来，发出了似是愤怒似是不甘的呜咽。  
 “怎么了？不来拿吗？”  
-铃羽的手指动了动，像是要碾坏钥匙圈。  
-篝反应很大，自现身以来第一次表现出头盔也掩饰不住的心情波动。  
+铃羽的手指动了动，像是要碾坏钥匙圈。篝的反应很大，自现身以来第一次表现出头盔也掩饰不住的心情波动。  
 “……哼。”  
 下一瞬间，铃羽把钥匙圈向着篝的腹部轻轻地抛了过去，仿佛朋友间的传接。钥匙圈在空中慢慢地画出一道抛物线。再强大的人，看见自己重要的东西被如此抛来，都会本能地想要用双手小心地接住。篝即使受过训练也没有胜过这种本能，举着刀的右手和左手一起，紧紧地握住了母亲的遗物。  
 “嗬呀——！！”  
@@ -179,28 +173,21 @@
 ![](../static/image/0041-4.png)
 
 “唔、咳、咳……！”  
-耳边听到篝从喉咙发出的呻吟。  
-嘎吱……嘎吱……  
-手臂传来篝的颈骨发力扭曲快要碎裂的触感。  
+耳边听到篝从喉咙发出的呻吟。嘎吱……嘎吱……手臂传来篝的颈骨发力扭曲快要碎裂的触感。  
 “给我老实点！我不会杀你的！”  
-但是，篝以这种极不自然的姿势，用唯一自由的左手抓起掉在地板上的匕首打算刺过来。  
-铃羽不得不再加大力度勒紧她的脖子。  
+但是，篝以这种极不自然的姿势，用唯一自由的左手抓起掉在地板上的匕首打算刺过来。铃羽不得不再加大力度勒紧她的脖子。  
 “咳、咳……！”  
 “别再抵抗了！篝！现在的我明白你的心情了。但是，这样果然错误的！是错的啊！”  
 就算是这样劝说，篝依旧没有放弃抵抗——反而将全身的力量用到极限，想要把铃羽甩开。  
 （这，这家伙！？到底是经历过怎样的训练啊！？）  
 根据以往的作战经验，无论多么坚强的士兵，在这种被控制住要害即将晕厥的时刻也是会屈服的。铃羽不寒而栗，又加大了力度。再这样下去，恐怕就不止勒晕，而是真的会勒死篝的。但是，如果解开束缚的话，自己肯定会被攻击甚至被杀。到底该如何是好——  
 “铃羽、姐姐……痛……好痛……”  
-这时，悲伤的声音从头盔里传了出来。铃羽不由得放松了警惕，双手的力道也减小了。  
-然而——篝明显算计到了这些，用尽全力将匕首刺向铃羽松弛下来的左手腕，迫使她放开了手臂，并借此机会翻身将她从背上甩下，然后双腿蹬着她的腰部踹飞了她。  
-铃羽的后背猛烈地撞在了电脑桌上，一瞬间无法呼吸。她倒在地上，头顶上的显示器和打印机等东西掉落下来，无情地殴打着她的赤裸的身体。  
+悲伤的声音从头盔里传了出来。铃羽不由得放松了警惕，双手的力道也减小了。然而，着明显是篝的算计。她用尽全力将匕首刺向铃羽松弛下来的左手腕，迫使她松开了手臂，并借此机会翻身将她从背上甩下，然后双腿蹬着她的腰部踹飞了她。铃羽的后背猛烈地撞在了电脑桌上，一瞬间无法呼吸。她倒在地上，头顶上的显示器和打印机等东西掉落下来，无情地殴打着她的赤裸的身体。  
 “呼、咳、咳咳……！”  
 “哈！嗬！呃嗬……！”  
-两人都气喘吁吁地艰难地站起身，继续对峙着。  
-篝的右臂无力地下垂，完全朝相反的方向扭曲着，恐怕暂时是废了。但她的左手扔紧握着匕首。  
+两人都气喘吁吁地艰难地站起身，继续对峙着。篝的右臂无力地下垂，朝完全相反的方向扭曲着，恐怕暂时是废了，但她的左手扔紧握着匕首。  
 “你这家伙，连这种阴招都学会了吗……”  
-铃羽恶狠狠地瞪着头盔面罩，仿佛想要看清那下面的篝成长后的变得丑恶的嘴脸。  
-两人维系着暂时的沉默，调整着呼吸。气氛紧张得连一根手指都不能轻易动作。汗从额头流下，流进了眼睛里。尽管如此，铃羽眼也不眨地等待着对方下一步的行动。  
+铃羽恶狠狠地瞪着头盔面罩，仿佛想要看清那下面的篝成长后的变得丑恶的嘴脸。两人维系着暂时的沉默，调整着呼吸。气氛紧张得连一根手指都不能轻易动作。汗从额头流下，流进了眼睛里。尽管如此，铃羽眼也不眨地等待着对方下一步的行动。  
 
 打破此刻平衡的，是开门的声音。  
 “喂，铃羽？刚才里面传来了好大的声音啊？”  
@@ -212,8 +199,7 @@
 桶子被突然出现在眼前的陌生人和她手里漆黑的匕首吓到而发出惊呼。  
 “爸爸！！”  
 “咦？呀！呀啊——！！”  
-刀刃抵在了桶子因为恐惧而僵直的脖子上——篝绕到了桶子背后，用他的身体作为巨大的盾牌。  
-铃羽向他们慢慢逼近，紧咬着牙齿，发出冰冷到极点的低吟：  
+刀刃抵在了桶子因为恐惧而僵直的脖子上——篝绕到了桶子背后，用他的身体作为巨大的盾牌。铃羽向他们慢慢逼近，紧咬着牙齿，发出冰冷到极点的低吟：  
 “放 手，篝……你要是敢伤到我爸一根汗毛……就算是你，我也真的会下杀手。”  
 “……”  
 但是，篝沉默不语，缩在人质背后退向门外。然后，在下一个瞬间，全力撞向了桶子巨大的后背。  
@@ -247,7 +233,7 @@
 “现在的铃羽，就像是工口游戏里的痴女角色一样的造型哦。”  
 “诶？啊—”  
 桶子突然提起不相干的话题，让铃羽懵住了。  
-<abbr title="os：这部分难道不值得一张 CG 吗 @5pb">
+<abbr title="os：这部分难道不值得一张 CG 吗 @5pb.">
 确实，现在的铃羽像是穿着一件迷你连衣裙一样。T 恤从肩膀滑了下来，差点露出胸部；下摆也卷了起来，几乎要被窥见隐秘部位了。  
 </abbr>
 “嘛，痴女也蛮对我胃口的，不得不说不修边幅的裸体单穿 T 恤造型相当不错的。嘿\~嘿\~”  
@@ -260,15 +246,11 @@
 “什么？”  
 “她……大概……在哭。”  
 “……诶？”  
-哭了……？  
-在那个头盔里面？  
-在和我激烈搏斗的同时也在哭泣着吗？  
-拿着匕首抵在父亲的脖子上威胁的同时也在哭泣着吗？  
-究竟是，为什么啊——  
+哭了……？头盔里的她，在和我激烈搏斗的同时，也在哭泣着吗？拿着匕首抵在父亲的脖子上威胁的同时，也在哭泣着吗？究竟是，为什么啊——  
 “所以啊，现在就认定她是敌人，是不是为时过早了呢？”  
 “……呼……爸爸。”  
 “哦？”  
-“冰激凌，买来了吗？香草的。”
+“冰激凌，买来了吗？我要香草的。”
 “啊，当然了。”  
 “好想吃啊……我……稍微有点累……了……”  
 话还没说完，铃羽就失去力气向前倾倒。  
@@ -276,8 +258,7 @@
 桶子吓得赶紧扑了上去，在她倒地前用厚实的身体抱住了她。  
 “喂、喂，铃羽？”  
 “啊，不好意思……没事的…………不过……稍微…让我休息会儿……”  
-这句话用尽了她最后一丝力气。  
-铃羽就这样在父亲的怀中，闭上了眼睛——失去了意识，瘫软下来。  
+这句话用尽了她最后一丝力气。铃羽就这样在父亲的怀中，闭上眼睛，失去意识，瘫软下来。  
 
 
 <br/>
