--- a/article/sg0/doc/0052.md
+++ b/article/sg0/doc/0052.md
@@ -53,7 +53,7 @@
 “要破解红莉栖设置的密码吗？”  
 “你很清楚呢。”  
 猜中了呀……  
-“那么……是她研究室的电脑还是什么？”  
+“那么……是她研究所的电脑还是什么？”  
 “不，是她的私人物品……在她家里发现的笔记本电脑。”  
 “那种东西为什么在你那……？”  
 “是红莉栖的母亲给我的，作为纪念的遗物。  
