--- a/article/sg0/doc/0075.md
+++ b/article/sg0/doc/0075.md
@@ -34,9 +34,9 @@
 “啊，不是，我想整理一下状况……『Amadeus』怎么样了？连接已经恢复了吗？”  
 试着这么问了，比屋定看起来依旧是困惑的表情。如此反应的话，『Amadeus』被劫持这件事，应该是没有发生过吗……？  
 突然手机传来了 RINE 的提示音。  
-『不可能会有那种事啊冈部君 >_<  
- 现在和光市的办公室一个人都没有！  
-![](../static/image/emoji/suzuha-renzhen.png)』  
+『不可能会有那种事啊冈部君 >_<』  
+『现在和光市的办公室一个人都没有！』  
+『![](../static/image/emoji/suzuha-renzhen.png)』  
 “桐生萌郁……？”  
 为什么这家伙会给我发 RINE——
 “……是。”  
@@ -45,9 +45,9 @@
 “从、从哪儿冒出来的啊！？”  
 “…………”  
 桐生萌郁又开始在手机上编辑信息。  
-『刚刚我就一直都在你后面呀！  
- 虽然我可能比较缺乏存在感，但是你那种看见幽灵一样的表情还是让我很受伤的呀！  
-![](../static/image/emoji/suzuha-heng.png)』  
+『刚刚我就一直都在你后面呀！』  
+『虽然我可能比较缺乏存在感，但是你那种看见幽灵一样的表情还是让我很受伤的呀！』  
+『![](../static/image/emoji/suzuha-heng.png)』  
 “一直……都在吗？”  
 “……在。”  
 那就是说，我，准许了桐生萌郁，自由出入 LAB……？到底是什么情况？  
@@ -57,11 +57,11 @@
 “封锁……？”  
 “…………”  
 桐生萌郁的手指在手机按键上高速运动着。  
-『真是的！刚才不是已经说了嘛！>_<  
- 昨天，研究所发生了瓦斯泄露的事故  
- 直到找出事故原因为止，设施禁止进入啦  
- 比屋定博士和雷斯吉宁教授他们，现在正临时借用东京电机大学的研究室哦  
- ![](../static/image/emoji/bear-zenyang.png)』  
+『真是的！刚才不是已经说了嘛！>_<』  
+『昨天，办公室发生了瓦斯泄露的事故』  
+『直到找出事故原因为止，设施禁止进入啦』  
+『比屋定博士和雷斯吉宁教授他们，现在正临时借用东京电机大学的研究室哦』  
+『![](../static/image/emoji/bear-zenyang.png)』  
 “瓦斯泄露事故……昨天……”  
 我的记忆里并没有这些事情。世界线变动，过去被改变了。  
 “于是比屋定就来这里了？”  
@@ -91,10 +91,10 @@
 『大厅那里人太多，不能好好地采访录音啊，我是这样想的＞_＜』  
 “然后，一进房间……只是几分钟没人的空当，房间就已经被盗了  
  连床铺和枕头之类的都用刀划开了，整个房间一团糟。  
- 我太没用了，手足无措的，什么都做不了。  
-『之后，我联系前台并报警了  
- 向警察汇报完情况，因为比屋定博士还没有冷静下来，  
- 于是就给冈部君发了消息，想让她在 LAB 休息一下』  
+ 我太没用了，手足无措的，什么都做不了。”  
+『之后，我联系前台并报警了』  
+『向警察汇报完情况，因为比屋定博士还没有冷静下来』  
+『于是就给冈部君发了消息，想让她在 LAB 休息一下』  
 “有什么东西被偷了吗？”  
 “跟警察汇报的时候也仔细确认过了，并没有丢什么东西，钱包也放在了包里。”  
 “……因为房间没人的时间，很短……”  
