--- a/article/sg0/doc/0079.md
+++ b/article/sg0/doc/0079.md
@@ -99,7 +99,7 @@
 就这样，电车到达了目的地。东京电机大学的周围一片寂静。从萌郁处得知，由于办公区和官府区就在附近的缘故，这个时间段基本没人。对萌郁说了声抱歉，请她在外面等一下。现在大学正在假期，虽然在校园内也能找个教室让她待一会，但是她却拒绝了。  
 “那结束后再联系你。”  
 说完，便和萌郁分开了。一直没找到井崎研究室的位置，真帆完全迷路了。由于正值放假期间，大学里基本没有学生，也没办法找谁来问路。最后，打电话给雷斯吉宁教授，询问了具体的位置。  
-研究室的门前，【井崎研究室】的牌子下面，用透明胶贴着一张信纸大小的纸张，纸面上印着教授微笑的照片，还有直接用电脑截图打印的一样，分辨率超低的文字。  
+研究室的门上，【井崎研究室】的牌子下面，用透明胶贴着一张信纸大小的纸张，纸面上印着教授微笑的照片，还有直接用电脑截图打印的一样，分辨率超低的文字。  
 
 ![](../static/image/0079-1.png)
 
