--- a/article/sg0/doc/0080.md
+++ b/article/sg0/doc/0080.md
@@ -36,7 +36,7 @@
 “播放……”  
 真帆一直认为，人类可以分为“听音乐更能集中注意力”和“无声状态更能集中注意力”两个派别。从脑科学角度来说，听音乐更能集中注意力的说法，原理上是不可能的。即使没有意识到，声音也会让鼓膜振动，随即大脑也会持续进行分析。话虽如此，如果针对这件事召开听证会，真帆觉得自己会作为前者的拥护者而站上证人席。理论和感情是不一样的。听音乐的时候最能集中注意力，灵感也会连续不断地闪现。但是，有一个条件——  
 “能让人集中注意力的音乐，只有莫扎特的曲子。”  
-喃喃自语着，真帆转向了电脑。电脑上的批处理运算用了两天终于结束了，今天一天要对输出结果进行检验。因为是星期六，研究室除了真帆没有其他人了。只有这一天，这个广阔的空间是她独享的研究室。所以她才没有接上耳机，而是用扬声器播放莫扎特的第 11 号钢琴奏鸣曲。也不是为了听音乐，就像是一种仪式，引导她集中注意力，仿佛是潜入数值和公式之海前的准备运动。潜入之后就没必要了，集中注意力后自然就听不到音乐了。周围的风景也从视野中被排除出去。眼前映出的只有数值和公式。脑海中，也只有数值和公式。很快，存在于那里的，唯有名为比屋定真帆的思考机器。意识脱离肉体的束缚，思考速度无限增加。那么，今天也开始愉快的旅程吧——  
+喃喃自语着，真帆转向了电脑。电脑上的批处理运算用了两天终于结束了，今天一天要对输出结果进行检验。因为是星期六，研究室除了真帆没有其他人。只有这一天，这个广阔的空间由她独享。所以她才没有接上耳机，而是用扬声器播放莫扎特的第 11 号钢琴奏鸣曲。也不是为了听音乐，就像是一种仪式，引导她集中注意力，仿佛是潜入数值和公式之海前的准备运动。潜入之后就没必要了，集中注意力后自然就听不到音乐了。周围的风景也从视野中被排除出去。眼前映出的只有数值和公式。脑海中，也只有数值和公式。很快，存在于那里的，唯有名为比屋定真帆的思考机器。意识脱离肉体的束缚，思考速度无限增加。那么，今天也开始愉快的旅程吧——  
 “早上好\~前辈。”  
 “噫呀啊啊啊——！”  
 突然有个人在耳边低语，真帆从椅子上弹了起来，最终失去平衡而倒下。抬头看去，红莉栖正惊慌失措地看着真帆。 
