--- a/article/sg0/doc/0089.md
+++ b/article/sg0/doc/0089.md
@@ -13,7 +13,7 @@
 【重启结束。『Amadeus』系统，启动。】  
 “认得出我吗，*‘Kurisu’*？”  
 莱耶丝开始和“红莉栖”交谈起来。背景依旧是红色，画面中的“红莉栖”依旧面无表情，依旧是机械的声音。  
-【比对声纹。维克多·孔多利亚大学，精神生理学研究所所属，朱蒂·莱耶丝教授。】  
+【比对声纹。维克多·孔多利亚大学，精神生理学研究室所属，朱蒂·莱耶丝教授。】  
 “*Yes!* 能告知我所拥有的权限吗？”  
 【莱耶丝教授对于『Amadeus』系统，拥有最高管理权限。】  
 【莱耶丝教授对于『Amadeus』系统的全部情报，无一例外，允许享有完全的访问。】  
@@ -33,14 +33,14 @@
 突然，系统界面的红色褪去，至今为止都面无表情如机械般说话的“红莉栖”，换成了如同往常一般充满了人类情感的说话方式。情感丰富到，明显就是在挑衅了。  
 “什、什么？”  
 “莫扎特的旋律是控制代码\~？那种事怎么可能啊！  
- 真到了需要更新的时候，前辈岂不是没法在研究所输入口令了吗？  
- 要是在研究所这样唱出来，一定会被教授录下来，每到聚会就进行播放。”  
+ 真到了需要更新的时候，前辈岂不是没法在研究室输入口令了吗？  
+ 要是在研究室这样唱出来，一定会被教授录下来，每到聚会就进行播放。”  
 “什、什么……！？”  
 不仅是莱耶丝，连在一旁悄悄看着的萌郁也惊讶地睁大了眼睛。真帆对着萌郁偷笑。当下的情景，她本人早已有所预料。  
 “假的……吧！？”  
 “真的哦！当然，连 1bit 的资料数据也没复制到你的 U 盘里！”  
 “怎么会……！？但是，确实有系统信息……”  
-“啊啊，那个啊？随便瞎编的啦，随·便·瞎·编！(＞ｖ☆)”  
+“啊啊，那个啊？随便瞎编的啦，随·便·编·哒！(＞ｖ☆)”  
 “居然是……瞎编的！？”  
 “真帆前辈突然唱起来，我一下子就明白了，这是为了争取时间吧。  
  所以，首先装成你计划得逞的样子啦\~  
