--- a/article/sg0/doc/0097.md
+++ b/article/sg0/doc/0097.md
@@ -97,7 +97,7 @@ Steins;Gate——这个词的意思，说实话篝并不明白。尽管如此，
 
 ![](../static/image/0097-3.png)
 
-画面中显示着的场景，毫无疑问是研究室。镜头往里走——打开白色的门，走进了旁边的房间。  
+画面中显示着的场景，毫无疑问是研究所。镜头往里走——打开白色的门，走进了旁边的房间。  
 “在这个房间，正在进行小白鼠实验。据此研究组……”  
 “……不，不知道……”  
 “但是，刚才……”  
