--- a/article/sg0/doc/0098.md
+++ b/article/sg0/doc/0098.md
@@ -66,7 +66,7 @@
  之后不久，节目真的播放了，那房间在进行这类实验的内容。”  
 “篝，这件事你有印象吗？”  
 “那个……记不清了。”  
-我不认为琉华子说的是谎话，毕竟也没有撒谎的必要。那么篝也一样没有什么撒谎的理由吧。  
+我不认为琉华子说的是谎话，毕竟也没有撒谎的必要，但篝也一样没有什么撒谎的理由吧。  
 “漆原先生，那个研究室你知道是在哪里吗？”  
 “那个……虽然记得不太详细，是脑啊记忆啊什么的，这类的研究。”  
 “这样的话，说不定是脑科学研究所。”  
@@ -74,9 +74,9 @@
 “是我所属的地方。”  
 然后也是红莉栖在过的地方。  
 “那么……或许，篝和比屋定和红莉栖有可能见过面吗？”  
-“说到底也只是有可能。进行脑科学研究的不止一处。  
+“说到底也只是有可能，进行脑科学研究的不止一处。  
  我在的地方也不只有研究生，一般的研究人员也会经常出入。  
- 我也没有见过研究所里的所有人。  
+ 我也没有见过研究所的所有人。  
  不过……同为日本人的话，如果见过面肯定会留下印象的。”  
 比屋定没有这方面的记忆，也就是说，她们并没有遇见过。  
 “琉华子，篝还有别的让人在意的事情吗？”  
