--- a/article/sg0/doc/0102.md
+++ b/article/sg0/doc/0102.md
@@ -8,10 +8,10 @@
 
 【脑科学综合研究机构·日本办公室&准备室】  
 比屋定真帆茫然地盯着电脑屏幕。外面的人们还沉浸在新年的喧闹气氛中。真帆上一次来到日本，还是夏天的暑气还没有完全退去的时候。那时她是利用休假时间来日本的。后辈牧濑红莉栖突然死亡，她来是为了看一眼那个作为现场的地方。  
-真帆对红莉栖的感情很复杂。在红莉栖来到同一所研究所之前，真帆一直以为自己是天才。跳级从高中毕业，十几岁就进入了大学的研究室，这么想也无可厚非，周围人也说真帆是天才。但是，真帆的自尊心，随着名为牧濑红莉栖的另一位天才的出现，被打得粉碎。牧濑红莉栖是真正的天才。和她相比，自己无论怎么看都明显差上一等。啊啊，赢不过她啊——真帆这样想过；不想输——真帆也这样想过；干脆，要是能憎恨她就好了——但是，名为牧濑红莉栖的少女连这种机会都没有提供。她始终是一名直率的科学家，对真帆也很坦诚。  
+真帆对红莉栖的感情很复杂。在红莉栖来到同一个研究所之前，真帆一直以为自己是天才。跳级从高中毕业，十几岁就进入了大学的研究所，这么想也无可厚非，周围人也说真帆是天才。但是，真帆的自尊心，随着名为牧濑红莉栖的另一位天才的出现，被打得粉碎。牧濑红莉栖是真正的天才。和她相比，自己无论怎么看都明显差上一等。啊啊，赢不过她啊——真帆这样想过；不想输——真帆也这样想过；干脆，要是能憎恨她就好了——但是，名为牧濑红莉栖的少女连这种机会都没有提供。她始终是一名直率的科学家，对真帆也很坦诚。  
 “前辈，您的这个研究，顺利的话应该能取得革命性的成果。如果有什么我能帮忙的，请尽管开口。”  
-总有一天要超越你——真帆这样想着；“赢不过前辈啊。”——总有一天要让她这么说；但是，这也成为了永远无法实现的事情。牧濑红莉栖踏上了旅途，无法再次回到真帆面前了。据说是被暴徒袭击了。但是真帆却完全没有实感。会不会哪天又回到研究室，若无其事地和教授们开始争论——真帆有这样的感觉；等到了那一天，真帆想让自己的『Amadeus』项目有所进展——“很厉害啊，前辈！”——想让她这么说。  
-『Amadeus』——拥有特定人的记忆的人工智能，是将颞叶储存的关于记忆的神经脉冲信号解析出来，将记忆数据化之后的产物。证明了这项技术可能性的，果然还是牧濑红莉栖。然后，这项技术经由真帆他们的手，逐步临近了实用阶段。等红莉栖回来的时候，应该已经可以预见将来实用化的结果了。如果亮出这样的成果，应该能让红莉栖佩服了。但是，这份希望也立即被击垮了。突然被告知项目被冻结，她当然无法接受。但是，无论怎么抗议，怎么和教授辩驳，项目被冻结的结局还是无法改变。『Amadeus』沉睡在研究室服务器的深处，和被数据化的牧濑红莉栖的记忆一起。牧濑红莉栖的记忆——拥有这份记忆的少女……为什么会发生这种事情？要说可能性的话，只有一个，和冈部伦太郎的假说一样——  
+总有一天要超越你——真帆这样想着；“赢不过前辈啊。”——总有一天要让她这么说；但是，这也成为了永远无法实现的事情。牧濑红莉栖踏上了旅途，无法再次回到真帆面前了。据说是被暴徒袭击了。但是真帆却完全没有实感。会不会哪天又回到研究所，若无其事地和教授们开始争论——真帆有这样的感觉；等到了那一天，真帆想让自己的『Amadeus』项目有所进展——“很厉害啊，前辈！”——想让她这么说。  
+『Amadeus』——拥有特定人的记忆的人工智能，是将颞叶储存的关于记忆的神经脉冲信号解析出来，将记忆数据化之后的产物。证明了这项技术可能性的，果然还是牧濑红莉栖。然后，这项技术经由真帆他们的手，逐步临近了实用阶段。等红莉栖回来的时候，应该已经可以预见将来实用化的结果了。如果亮出这样的成果，应该能让红莉栖佩服了。但是，这份希望也立即被击垮了。突然被告知项目被冻结，她当然无法接受。但是，无论怎么抗议，怎么和教授辩驳，项目被冻结的结局还是无法改变。『Amadeus』沉睡在研究所服务器的深处，和被数据化的牧濑红莉栖的记忆一起。牧濑红莉栖的记忆——拥有这份记忆的少女……为什么会发生这种事情？要说可能性的话，只有一个，和冈部伦太郎的假说一样——  
 
 “哦呀？”  
 入口的门打开，熟悉的身材高大的男人走了进来。  
@@ -30,7 +30,7 @@
 “那我想问……『Amadeus』现在怎么样了？”  
 “什么怎么样……目前为止基本没什么眉目，你也应该很清楚吧。”  
 “这个我知道。我想问的是，『Amadeus』的数据怎么样了？”  
-“保存在研究室的服务器里。”  
+“保存在研究所的服务器里。”  
 “有谁访问过，或者带出去过吗？”  
 雷斯吉宁教授皱着眉头，缓缓摇着头。  
 “*Maho*……虽然不知道你为什么抱有这样的疑问……  
