--- a/article/sg0/doc/0005.md
+++ b/article/sg0/doc/0005.md
@@ -7,7 +7,7 @@
 ---
 
 ATF 的派对结束以后，已经过了几天。  
-从池袋步行 10 分钟，然后从堉玉县的和光市站坐 10 分钟的巴士，目的地位于独立行政法人“理化学研究所”旁边不远处建造的大楼二层。  
+从池袋步行 10 分钟，然后从堉玉县的和光市站坐 10 分钟的巴士，目的地位于独立行政法人的物理化学研究所旁边不远处建造的大楼二层。  
 【脑科学综合研究机构·日本办公室&准备室】  
 入口处的牌子上是这么写的。不仅要用三种特殊钥匙解锁，最后还得用上安全卡，好不容易终于进来了。  
 “这里是？”  
