--- a/article/sg0/doc/0010.md
+++ b/article/sg0/doc/0010.md
@@ -13,106 +13,98 @@
 ![](../static/image/0010-1.png)
 
 “别开玩笑了，在这种重要时期，为什么会是我……”  
-那夜，真帆的后辈，牧濑红莉栖一直在不停地自言自语。  
-维克多·孔多利亚大学的脑科学研究所。在那里，真帆和红莉栖用的是同一个研究室。因此，全身散发着不高兴气场的红莉栖的自言自语，无论如何真帆都会听到。要只是一点点自言自语的话还是完全可以忍受的。但是从早晨开始一直都是这个样子，让真帆完全没有办法集中精力做研究。感到厌烦的真帆停下了手中正在写的论文。  
+那夜，真帆的后辈，牧濑红莉栖全身散发着不高兴的气场，一直在不停地自言自语。同在维克多·孔多利亚大学的脑科学研究所，真帆和红莉栖用的是同一个研究室。因此，红莉栖的发出的动静，无论如何真帆都会听到。要只是稍微一点还是完全可以忍受的，但是红莉栖从早晨开始一直都是这个样子，让真帆完全没有办法集中精力做研究。终于感到厌烦的真帆停下了手中正在写的论文。  
 “喂，我说，红莉栖，该适可而止了吧？”  
-维克多·孔多利亚大学的各个研究所，基本来说都用英语作为通用语言。与教授和其他研究员在一起的时候用英语交流是理所当然的，但是和同样是日本人的红莉栖共处一室的时候，真帆大多时候都是使用日语。  
+维克多·孔多利亚大学的各个研究所，基本都用英语作为通用语言。与教授和其他研究员在一起时用英语交流是理所当然的，但是和同为日本人的红莉栖共处一室时，真帆大多都是使用日语。  
 “诶？啊，有什么事吗？”  
 由于真帆的提醒，正在打包行李的红莉栖呆呆地转过头来。  
-“太吵了集中不了啊。这篇论文明天就必须要提交给教授看。”  
+“你太吵了让我无法集中啊，这篇论文明天就必须要提交给教授看。”  
 “难道说，我……又在自言自语吗？”  
 “要不要控告你噪音污染啊？”  
 “抱歉。”  
-清醒过来的红莉栖低下了头，之后挠了挠头。  
-为了冷静下来，真帆站了起来，走向装着资料的书柜，想要拿取论文中引用到的相关文献。但是，最重要的文献却在书柜的最顶端。  
+清醒过来的红莉栖低下了头，之后挠了挠头。为了冷静下来，真帆站了起来，走向装着资料的书柜，想要拿取论文中引用的相关文献。但是，最重要的文献却在书柜的最顶端。  
 “呀……嘿！”  
 这肯定是来自谁的捉弄……这样想着的真帆带着怨念的眼神看向了上面厚厚的书。她下定决心伸出手去，但无论如何努力伸长手臂，完全没有能够得到的样子。真帆看着自己徒劳伸出的如同枯木般瘦小的手臂，咬住嘴唇。跳级进入大学之后，尤其是在进入这个研究所之后，她越来越为自己的娇小感到难为情。太阳下山之后独自散步必定会被警察叫住，不出示身份证就没办法进入酒吧之类的地方，就连去便利店也不能简单的买到酒和药。最让她感到屈辱的是，不管走到了哪里都会被人误认为中学生，就算说自己是 21 岁也没人信。话说回来，在美国无论是什么东西都大得过分。  
 “那个，我来帮你拿吧？”  
-红莉栖注意到了真帆的危机状况，赶忙靠了过去。  
-但是真帆却逞强，平静地回答道：  
+红莉栖注意到了真帆的危机状况，赶忙靠了过去。可是真帆却在逞强，平静地回答道：  
 “没事啦，我并没有在为难什么。”  
 “不是正在为难吗？”  
 “没有为难！”  
 “是吗？”  
 “是的！”  
-“不过，我也有想拿的书在。”  
-红莉栖说完，简单地就把手伸到最顶端，把真帆想要的书拿了下来。  
+“不过，我也有想拿的书。”  
+红莉栖说完，轻松地把手伸到最顶端，把真帆想要的书拿了下来。  
 “……长得高就是好啊。”  
 “不是，我也没有怎么高……啊！”  
 红莉栖注意到自己说了不能说的话，把嘴用手捂上。  
-“……谢谢，帮大忙了。在日本有什么需要的就说，我会给你送过去的。”  
+“……谢谢，帮大忙了。在日本有什么需要的就告诉我，我会给你送过去的。”  
 “好，非常感谢。”  
-红莉栖道谢着，把书递给了真帆。在此之后，突然像是想到了什么似的，眼睛闪闪发光。  
-
-“呐，学姐？有关刚刚的话……”  
+红莉栖道谢，把书递给了真帆。然后，突然像是想到了什么似的，眼睛闪闪发光。  
+“呐，学姐？关于刚刚的事……”  
 “嗯？刚刚什么事？”  
-“是‘自言自语’的事。”  
+“‘自言自语’的事。”  
 “诶？哦……”  
 红莉栖好像又突然想到了什么新的点子。这个后辈经常会这样，真帆已经习惯了。  
 “那个是不是能成为‘自我’的一种证明呢？”  
 “『Amadeus』的？”  
 “对。”  
 “的确，如果那孩子突然开始自言自语我也会很惊讶。”  
-不管怎样优秀的人工智能，只要不编写相关的程序，就不可能自言自语。话说回来，这种功能既没有意义也没有必要。“自言自语”的再现，可能会成为观测“自我”的一种手段。但是对真帆来说，要举双手赞成这个想法还是有些犹豫。  
-“在这里，可不是能乱说这种话的。  
- ‘灵魂’是神赐予人类的东西——不要忘记持这种想法的人有很多。”  
+无论是怎样优秀的人工智能，只要不编写相关的程序，就不可能自言自语。话说回来，这种功能既没有意义也没有必要。“自言自语”的再现，可能会成为观测“自我”的一种手段。但是对真帆来说，要举双手赞成这个想法还是有些犹豫。  
+“在这里，可不是能乱说这种话的。不要忘记，‘灵魂’是神赐予人类的——持这种想法的人有很多。”  
 “……说的也是呢。”  
-刚才红莉栖那闪闪发光的表情瞬间灰暗起来。  
-红莉栖和真帆在研究所里都是异端般的存在。是日本人，又是女性，更是如此。何况红莉栖太过优秀。即便如此，也不会露骨的表现出来，大多数研究员前辈们都抱着敬而远之的态度。多亏主任研究员雷斯吉宁教授对真帆和红莉栖的关照，她们才总算获得了能平稳的进行研究的状态。要是刚才那种发言让他们听见，真不知道要受到多少的责难。  
-真帆拍了一下红莉栖的肩膀。  
-“嘛，这一阵子你就去日本放松一下吧。”  
+红莉栖那闪闪发光的表情瞬间灰暗起来。红莉栖和真帆在研究所里都是异端般的存在，是稀有的日本人，又是女性，何况红莉栖太过优秀。即便如此，大多数研究员前辈们都抱着敬而远之的态度，不会露骨地表现出来。多亏主任研究员雷斯吉宁教授对真帆和红莉栖的关照，她们才总算能安稳地进行研究。要是刚才的发言让他们听见，真不知道又要受到多少责难。真帆拍了一下红莉栖的肩膀表示安慰：  
+“嘛，这阵子你就去日本放松一下吧。”  
 “就是这一点我不能接受！”  
 “为什么？我倒是觉得在那边应该会很开心的。”  
-“要留学也应该要在研究生院啊，为什么是高中啊？”  
-“这是没办法的啊。在日本，你的年龄还是高中生而已。”  
-“嗯……”  
+“要留学也应该要去研究生院啊，为什么是高中啊？”  
+“这是没办法的啊，在日本，你的年龄还只是高中生而已。”  
+“呜……”  
 “教授的好意你就老老实实接受吧。”  
-真帆想起了雷斯吉宁教授说的话——  “因为红莉栖有些神经质，互相扯后腿积累的压力已经到达极限了。这样下去就做不成一个好的研究者了。”教授这样担心着。  
-“而且，本来到了 7 月就必须得去日本，不是正好吗？”  
-“嗯。其实这点也有点犹豫。”  
+真帆想起了雷斯吉宁教授说的话——“红莉栖有些神经质，被互相扯后腿积累的压力已经到达极限了，再这样下去就做不成一个好的研究者了。”教授这样担心着。  
+“而且，本来到了 7 月也必须得去日本，不是正好吗？”  
+“嗯，其实这点也有点犹豫。”  
 “好像是，秋叶原技术论坛？”  
 “演讲什么的又不习惯，真不知道该怎么办。”  
-“毕竟你在《*Science*》杂志上发表过论文了嘛，之后这种事情会更多的，好好练习吧。”  
+“毕竟你在《*Science*》上发表过论文了嘛，之后这种事情会更多的，好好练习吧。”  
 “真是讨厌啊……”  
-红莉栖独自嘟哝着。  
-真帆理解红莉栖的心情，因为她也不擅长在许多人面前行动。但是想在权威科学杂志上发表论文，并且举办演讲的研究者有很多。战胜了这么多研究者而取得了荣誉，相比是会被嫉妒的吧。为了不让周围的人说闲话，就必须尽到自己的职责。  
-“——就算这样说，我自己的性格倒也可能有些扭曲。”真帆的内心如此想着，稍微有点自我厌恶。在这些嫉妒着的研究者当中，是不是也包含着自己呢？真帆时常抱有这种近似于畏惧的心情。面前的才女，就是如此地与真帆不同。不管怎样去追赶都触碰不了的存在，转瞬间便将自己甩在身后的存在。  
-
+红莉栖独自嘟哝着。真帆理解红莉栖的心情，因为她也不擅长在许多人面前行动。但是想在权威科学杂志上发表论文，并且举办演讲的研究者有很多。战胜了这么多研究者而取得了荣誉，想必会被嫉妒的吧。为了不让周围的人说闲话，就必须尽到自己的职责。“——就算这样说，自己的性格倒也可能有些扭曲。”真帆如此想着，稍微有点自我厌恶。这些嫉妒着红莉栖的研究者当中，是不是也包括自己呢？真帆时常抱有这种近似于畏惧的心情。面前的天才少女，就是如此地与真帆不同。不管怎样去追赶都触碰不了的存在，转瞬间便将自己甩在身后的存在。  
 “学姐？”  
-被红莉栖一副不可思议的表情看着，真帆慌忙转移话题：  
-“那，那个……！是要在日本和父亲见面吗？”  
-听说红莉栖的双亲没有离婚，而是分居的状态，只有父亲在日本居住。但是问题一说出口，真帆就反省着自己是不是提问太过深入别人的隐私了。但是红莉栖看起来却有些害羞。  
+真帆从发呆中回过神，看到红莉栖一副不可思议的表情，连忙转移话题：  
+“那、那个……！你是要在日本和父亲见面吗？”  
+听说红莉栖的双亲没有离婚，而是分居的状态，只有父亲在日本居住。问题一说出口，真帆就反省自己是不是提问太过深入别人的隐私了，但是红莉栖看起来却有些害羞。  
 “其实，父亲那边送来了邀请函。”  
 “哦？”  
-“说是到了夏季有新的理论发表会，我想去看看。”  
+“说是夏季有新理论的发表会，我想去看看。”  
 “新理论是？”  
-“那个……我还没有详细听过，好像是有关相对性理论的东西……”  
+“那个……我还没有详细听过，好像是有关相对性理论……”  
 红莉栖的笑脸上带上了一些为难的样子。  
 “哼\~？”  
 含糊不清的措辞，让真帆感到了违和感，于是就不再进一步深究。  
 “总而言之路上小心，我会期待着你的礼物啦\~”  
 “什么礼物比较好？”  
-“嗯……难得你去一趟秋叶原，要是有什么稀奇的就好了——你对秋叶原挺熟的吧？”  
+“嗯……难得你去一趟秋叶原，要是有什么稀奇的东西就好了——你对秋叶原挺熟的吧？”  
 “诶？为什么？”  
-“在休息时间里，你不是经常看那种网页吗？”  
+“休息时间里，你不是经常看那种网页吗？”  
 “什……么？！难道是『Amadeus』告诉你的？”  
-“那孩子才不会这么做。有时你明明坐在我后面，却无意识地沉到视频里了。”  
+“那孩子才不会这么做。有时你明明坐在我后面，却无意识地沉浸在视频里了。”  
 “啊呜！没想到竟然会暴露，真恨大意的自己……”  
 非常罕见地，红莉栖抱着头。看她这样子，真帆从心底里感到惊讶。  
 “学姐，拜托！一定要向其他人保密！”  
-“我觉得这并不是什么必须隐藏的东西啊……  
- 知道了，不会说出去的。”  
+“我觉得这并不是什么必须隐藏的东西啊……不过知道了，不会说出去的。”  
 不知为何，能和红莉栖共享秘密，真帆感到高兴。  
 “帮大忙了……”  
 看着从心里松了一口气的红莉栖，真帆继续说：  
 “呐，你从日本回来后，一起验证『Amadeus』会不会自言自语吧。”  
 “嗯！”  
-红莉栖发自内心的高兴地答应了。这是对于探求未知事物喜欢的不能自已的，天生的科学家的表情。如同拿到新玩具的孩子一样天真无邪，十分美丽。真帆十分喜欢有着如此表情的后辈。  
+红莉栖发自内心的高兴地答应了。这是对于探求未知事物喜欢到不能自已的，天生的科学家的表情。如同拿到新玩具的孩子一样天真无邪，十分美丽。真帆十分喜欢有着如此表情的后辈。  
+
 但是……真帆和红莉栖，两人的约定，到最后都没有实现。  
 不仅如此，甚至连再次见面都已经做不到了。  
 
 [ 2010/11/28 21:18 日本和光市 脑综研办公室 ]  
+
 ![](../static/image/0010-2.png)
+
 自从到了日本，像这样想起红莉栖的次数日渐增加。是因为到了日本，还是和『Amadeus』的“红莉栖”交流增加的缘故，真帆自己也不清楚。还是说……是因为和名为冈部伦太郎的青年的相遇吗？  
 “我所不知道的……认识红莉栖的人……吗……”  
 回想起来，在第一次见面那天，自己就在冈部伦太郎面前流下了眼泪。回忆起这件不愿想起的事，害羞的真帆急忙停下自己的回忆。  
