--- a/article/sg0/doc/0034.md
+++ b/article/sg0/doc/0034.md
@@ -114,10 +114,8 @@
  我不可能向这样的你和盘托出吧。  
  也不是说我不信任你……  
  毕竟是关于红莉栖的事情，觉得还是慎重一点的好。”  
-“是啊，你这样的做法是正确的。  
- 你没有反对让我做『Amadeus』的测试员，也是有所盘算吧？”  
-“不要用盘算这种说法……  
- 我只是，对于作为红莉栖的朋友的你，想要更多地了解而已。”  
+“是啊，你这样的做法是正确的。你没有反对让我做『Amadeus』的测试员，也是有所盘算吧？”  
+“不要用盘算这种说法……我只是，想要更多地了解，作为红莉栖的朋友的你而已。”  
 “为了获取红莉栖的秘密？”  
 “我是想更了解她啊……！”  
 比屋定显露出敌意的眼神，回瞪着我。  
@@ -128,9 +126,9 @@
 “现在在 LAB 吗？”  
 “嗯啊？没有。”  
 “那你在哪儿？”  
-“在家玩绝赞的工口游戏中。怎么了吗？”  
+“在家玩绝赞的工口游戏中，怎么了？”  
 “想聊一下关于你的地下兼职的事。”  
-“啊……那个啊。关于牧濑氏的情报，你有头绪了？”  
+“啊……那个啊，关于牧濑氏的情报，你有头绪了？”  
 “啊。”  
 当然，有头绪什么的是假话。如果现在不立刻从桶子那收回笔记本电脑，我担心他有可能遇到危险。我偷偷地瞄了一眼比屋定，她什么都没说。  
 “这样吧，你用 RINE 发给我怎么样？”  
