--- a/article/sg0/doc/0046.md
+++ b/article/sg0/doc/0046.md
@@ -18,7 +18,7 @@
  就算你没有那方面的打算，也会慢慢变成那样的。  
  这，就是人的心理啊。  
  就算从帮助他的角度讲，也希望你能套出他持有的情报。  
- 那样的话，我也可以无条件让 *Rintaro* 进入我们的研究室。  
+ 那样的话，我也可以无条件让 *Rintaro* 进入我们的研究所。  
  *Maho*，把你了解到的关于他的事，全部报告给我。  
  也可以这么说——他的未来掌握在你的手里。』  
 那些话语和噪音非常令人厌烦，真帆到现在也没理解它们到底在表达什么内容。虽然作为声音的的确确地传入了脑袋，但是大脑拒绝将之作为语言提取出其中的意义。不过，即使理解了也无济于事了。真帆已经对冈部伦太郎做出了无法挽回的事——把他出卖给了雷斯吉宁教授和 STRATFO。越是意识到这一点，真帆心中的罪恶感就越重。  
