--- a/article/sg0/doc/0070.md
+++ b/article/sg0/doc/0070.md
@@ -29,15 +29,15 @@
 “总、总之……大家，先冷静……”
 “就算你这么说……”  
 “别管其他的！冷静下来按照他们说的做！”  
-明明是经历过无数次的情况，即使这样，我光是发出声音就很勉强了。但是，好像理解了我的心情一样，大家停止了骚乱，相互靠拢，咽着口水盯着侵入者的举动。把枪口笔直对着我们的男子们的身后响起了高跟鞋的声音。从脚步声判断，走上楼梯的——是女性。果然是那家伙吗？桐生萌郁——是你吗？你，又要把真由理……最终，从开着的门走进来的是——全身黑色的女性，贴身的黑色骑手装以及黑色头盔，脸被黑色的面罩覆盖着，看不见。这家伙果然是——但是，这伙人的目的是什么？那时候，他们的目标是我和桶子以及红莉栖三个人。但现在红莉栖不在。那么说是——比屋定吗？穿黑色骑手装的女人扫视沉默的室内，径直走近围在一起的我们，然后伸出了手。那只手抓住篝的手臂，拉了过去。  
+明明是经历过无数次的情况，即使这样，我光是发出声音就很勉强了。但是，好像理解了我的心情一样，大家停止了骚乱，相互靠拢，咽着口水盯着侵入者的举动。把枪口笔直对着我们的男子们的身后响起了高跟鞋的声音。从脚步声判断，走上楼梯的是一位女性。果然是那家伙吗？桐生萌郁，是你吗？你，又要把真由理……最终，从开着的门走进来一位全身黑色的女性，身穿贴身的黑色骑手装，头戴黑色全覆式头盔，脸被黑色的面罩覆盖着看不见。这家伙果然是……但是，这伙人的目的是什么？那时他们的目标是我和桶子以及红莉栖，但现在红莉栖不在，那么是比屋定吗？穿黑色骑手装的女人扫视鸦雀无声的室内，径直走近靠在一起的我们，然后伸出了手。那只手抓住篝的手臂，拉了过去。  
 “诶？”  
 “篝！”  
-这群人的目标是篝？但是，为什么是篝？不，如果说目标是篝的话，理由只有一个。果然，这群人——是知道，篝是来自 2036 年的人？  
+这群人的目标是篝？但是，为什么是篝？不，如果说目标是篝的话，理由只有一个。果然，这群人知道，篝是来自 2036 年的人？  
 “不、不要！放开我！”  
 篝试图反抗。但是，穿黑色骑手装的女人的力量比想象的要强得多，篝的身体被轻松地拽了过去。  
 “不要！救命！谁来救救我！”  
 “篝！”  
-“真由理酱！救我！”  
+“真由理酱！救救我！”  
 真由理和篝向对方伸长手臂，但是，双方的手都只抓到了空气。怎么办？我该怎么办？如果在这里乱动的话，真由理又要……大家……那么，只能无奈地看着篝被抓走吗？我……我要……  
 “咕啊！”  
 突然，门附近传来了惨叫声。  
