--- a/article/sg0/doc/0081.md
+++ b/article/sg0/doc/0081.md
@@ -48,28 +48,28 @@
 “又是‘红莉栖’吗……”  
 “……我也……收到了，是菲莉丝小姐。”  
 “菲莉丝小姐？”  
-『大事不好了喵！  
- 法蒂玛第 314 号预言终于实现了喵！  
- 因为人们忘却了信仰，古印加帝国以自身为代价施加的封印被破坏了喵！  
- 这样下去，冥王星的恐怖大邪神复活也只是时间的问题喵！  
- 不仅仅是地球，也是大银河星团联盟的生死危机喵！  
- ![](../static/image/emoji/taru-sorry.png)  
- 现立即向贵族院、元老院及奥之院全体发布召集通告喵！  
- 总统如今行踪不明，一定是乘着空军一号深入敌境，独自奋战喵！  
- 接下来菲莉丝也要为了再次封印邪神而准备举行仪式了喵！  
- 希望你们两人能为我争取时间！  
- ![](../static/image/emoji/moeka-thanks.png)』  
-「喂等等！  
- 到底在说什么啊！」  
+『大事不好了喵！』  
+『法蒂玛第 314 号预言终于实现了喵！』  
+『因为人们忘却了信仰，古印加帝国以自身为代价施加的封印被破坏了喵！』  
+『这样下去，冥王星的恐怖大邪神复活也只是时间的问题喵！』  
+『不仅仅是地球，也是大银河星团联盟的生死危机喵！』  
+『![](../static/image/emoji/taru-sorry.png)』  
+『现立即向贵族院、元老院及奥之院全体发布召集通告喵！』  
+『总统如今行踪不明，一定是乘着空军一号深入敌境，独自奋战喵！』  
+『接下来菲莉丝也要为了再次封印邪神而准备举行仪式了喵！』  
+『希望你们两人能为我争取时间！』  
+『![](../static/image/emoji/moeka-thanks.png)』  
+「喂等等！」  
+「到底在说什么啊！」  
 『![](../static/image/emoji/okarin-ha.png)』  
-『刚刚是在开玩笑喵  
- ![](../static/image/emoji/moeka-sorry.png)  
- 但是真的有大事发生了喵！  
- ![](../static/image/emoji/taru-sorry.png)（x2）』  
+『刚刚是在开玩笑喵』  
+『![](../static/image/emoji/moeka-sorry.png)』  
+『但是真的有大事发生了喵！』  
+『![](../static/image/emoji/taru-sorry.png)（x2）』  
 「发生什么了？」  
 『![](../static/image/emoji/okarin-ha.png)』  
-『待会儿再解释喵！  
- 回到公寓之前，有项重大任务要拜托两位喵！』  
+『待会儿再解释喵！』  
+『回到公寓之前，有项重大任务要拜托两位喵！』  
 菲莉丝发来一堆意义不明的信息，真帆和萌郁看着对方，都露出了不解的神情。  
 
 ![](../static/image/0081-2.png)
@@ -151,7 +151,7 @@
 “比我优秀的脑科学家要多少有多少。  
  说不定哪一天，我发明的人工智能，会写出比我还优秀的论文。  
  但是，那又能怎么样？  
- 维克多·孔多利亚大学的雷斯吉宁研究所中，我的座位是离门口最近的。  
+ 维克多·孔多利亚大学的研究室中，我的座位是离门口最近的。  
  门的构造有问题，总会有风吹进来，走廊上聊天的人也很烦，但是那就是我的位置。  
  就算宇宙毁灭，我也不会把那个位置让给别人。  
  比我优秀的脑科学家，比我优秀的人工智能，想要那个位置我就要让出来吗？  
